flex/flex-tests/testData/flex_highlighting/ExtendMultipleClasses.as
package {
public class ExtendMultipleClasses{}
}

class AnotherClass {}
class SubClass <error descr="Class cannot extend multiple classes">extends ExtendMultipleClasses, AnotherClass</error> {}